# devops-capstone-project

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: ci-build.yaml
.github/ISSUE_TEMPLATE/: issues_template.md
deploy/: deployment.yaml
service/: routes.py
tests/: test_routes.py
